# goldfinger

./: .gitignore  .slumber.yml  Cargo.toml  README.md  Rocket.toml  build.sh  config.json  goldfinger.service  mise.toml  mock_serial.sh  release.sh  rust-toolchain.toml  slumber.yml  test_lcd.sh
examples/: lcd.rs
src/: api.rs  config.rs  display.rs  lib.rs  main.rs  mock_display.rs  reducer.rs  resource.rs  state.rs  transit.rs  util.rs  weather.rs
src/resource/: lcd.rs
src/resource/lcd/: weather.rs
static/: styles.css
templates/: index.html.hbs  index.html.tera
