[package]
description = "Control system for a Raspberry Pi with e-ink display"
edition = "2021"
name = "goldfinger"
version = "0.1.0"

[dependencies]
anyhow = "1.0.72"
chrono = {version = "0.4.31", default-features = false, features = ["clock", "serde"]}
ctrlc = {version = "3.4.4", features = ["termination"]}
display-interface = "0.5.0"
display-interface-spi = "0.5.0"
embedded-graphics = "0.8.1"
embedded-hal = "1.0.0"
env_logger = {version = "0.11.5", default-features = false, features = ["auto-color", "humantime"]}
indexmap = "2.7.0"
itertools = "0.14.0"
log = "0.4.20"
serde = {version = "1.0.195", features = ["derive"]}
serde_json = {version = "1.0.111", default-features = false}
u8g2-fonts = {version = "0.5.1", features = ["embedded_graphics_textstyle"]}
ureq = {version = "2.9.6", features = ["json"]}
weact-studio-epd = {version = "0.1.2", features = ["blocking"]}

[target.'cfg(target_arch = "arm")'.dependencies]
linux-embedded-hal = "0.4.0"
